[package]
name = "gaaius_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "GAAIUS CORE V4 - Secure, scalable blockchain core node with full CLI, P2P, and wallet logic."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
