[package]
name = "gaaius-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
clap = { version = "4.0", features = ["derive"] }
